--- a/tela_inicial.ui
+++ b/tela_inicial.ui
@@ -35,7 +35,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>Banco</string>
+   <string>L-Bank</string>
   </property>
   <property name="styleSheet">
    <string notr="true"/>
@@ -286,6 +286,26 @@ border-color:black;</string>
     </property>
     <property name="text">
      <string>L-Bank</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="Sair_Button">
+    <property name="geometry">
+     <rect>
+      <x>700</x>
+      <y>30</y>
+      <width>51</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border-radius: 2px;
+border-style:solid;
+border-width:1px;
+border-color:black;
+background-color:white;</string>
+    </property>
+    <property name="text">
+     <string>SAIR</string>
     </property>
    </widget>
   </widget>
